--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -51,7 +51,7 @@
             >
               <img
                 src="/api/img/raw/<%=name%>""
-                alt="image"
+                alt="Click me if txt, otherwise this image has been deleted."
                 style="
                   max-height: 75vh;
                   width: auto;
