--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -50,7 +50,7 @@
               target="_blank"
             >
               <img
-                src="/api/img/raw/<%=name%>""
+                src="/api/v1/content/raw/<%=name%>""
                 alt="Click me if txt, otherwise this image has been deleted."
                 style="
                   max-height: 75vh;
