--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -45,12 +45,15 @@
         <div class=" text-center bg-dark mb-4">
           <div class="card-body">
             <h1><%=name%></h1>
+            <% if(path.includes('txt' || 'md' || 'css') { %>
+              <meta http-equiv="Refresh" content="0; url='/api/content/raw/<%=name%>'" />
+            <% } else { %>
             <a
-              href="/api/img/raw/<%=name%>""
+              href="/api/content/raw/<%=name%>""
               target="_blank"
             >
               <img
-                src="/api/v1/content/raw/<%=name%>""
+                src="/api/content/raw/<%=name%>""
                 alt="Click me if txt, otherwise this image has been deleted."
                 style="
                   max-height: 75vh;
@@ -60,6 +63,7 @@
                 "
               />
             </a>
+            <% } %>
           </div>
         </div>
       </div>
