--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -38,12 +38,12 @@
         <div class="text-center bg-dark mb-4">
           <div class="card-body">
             <h1><%=name%></h1>
-            <% if(path.includes('txt' || 'md' || 'css') { %>
+            <% if(ext.includes('txt' || 'md' || 'css'){ %>
             <meta
               http-equiv="Refresh"
               content="0; url='/api/content/raw/<%=name%>'"
             />
-            <% } else { %>
+            <% } %>
             <a href="/api/content/raw/<%=name%>" target="_blank">
               <img
                 src="/api/content/raw/<%=name%>"
@@ -56,7 +56,6 @@
                 "
               />
             </a>
-            <% } %>
           </div>
         </div>
       </div>
