--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -38,7 +38,7 @@
         <div class="text-center bg-dark mb-4">
           <div class="card-body">
             <h1><%=name%></h1>
-            <% if(ext.includes('txt' || 'md' || 'css'){ %>
+            <% if(ext.includes('txt' || 'md' || 'css')){ %>
             <meta
               http-equiv="Refresh"
               content="0; url='/api/content/raw/<%=name%>'"
