--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -15,9 +15,9 @@
       href="https://cdn.upload.systems/assets/css/argon.css"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/api/img/raw/<%=name%>" />
-    <meta name="twitter:image:src" content="/api/img/raw/<%=name%>" />
-    <meta property="og:image" content="/api/img/raw/<%=name%>" />
+    <meta name="twitter:image" content="/api/content/raw/<%=name%>" />
+    <meta name="twitter:image:src" content="/api/content/raw/<%=name%>" />
+    <meta property="og:image" content="/api/content/raw/<%=name%>" />
     <meta name="theme-color" content="#7c00d7" />
     <meta property="og:title" content="<%=name%>" />
     <meta name="twitter:title" content="<%=name%>" />
@@ -29,7 +29,7 @@
       property="og:description"
       content="Uploaded with a poggers sharex service."
     />
-    <link type="application/json+oembed" href="/api/img/raw/<%=name%>"" />
+    <link type="application/json+oembed" href="/api/content/raw/<%=name%>"" />
   </head>
   <body class="bg-dark">
     <div class="row mt-5 no-gutters">
