--- a/src/pages/sus.ejs
+++ b/src/pages/sus.ejs
@@ -37,13 +37,6 @@
     <h3>
         Sussy ShareX Host
     </h3>
-    <p>Join <a style="color: #ff8c8c" href='https://discord.gg/dSjDG7sPe6'>Team Tritan</a> to request an API key/ShareX config.</p>
-    <br /> 
-    <h4>Image Directories</h4>
-    <p>
-    <% for (i of dirs){ %>
-      <%= i + ", " %>
-    <% } %> 
-      </p>
+    <p>Join <a style="color: #ff8c8c" href='https://discord.gg/http'>Team Tritan</a> to request an API key/ShareX config.</p>
   </body>
 </html>
