--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -29,7 +29,7 @@
       property="og:description"
       content="Uploaded with a poggers sharex service."
     />
-    <link type="application/json+oembed" href="/api/content/raw/<%=name%>"" />
+    <link type="application/json+oembed" href="/api/content/raw/<%=name%>" />
   </head>
   <body class="bg-dark">
     <div class="row mt-5 no-gutters">
@@ -38,7 +38,7 @@
         <div class="text-center bg-dark mb-4">
           <div class="card-body">
             <h1><%=name%></h1>
-            <% if(ext.includes('txt' || 'md' || 'css')){ %>
+            <% if(ext.includes('txt' || 'md' || 'css' || 'exe' || 'html')){ %>
             <meta
               http-equiv="Refresh"
               content="0; url='/api/content/raw/<%=name%>'"
@@ -47,7 +47,7 @@
             <a href="/api/content/raw/<%=name%>" target="_blank">
               <img
                 src="/api/content/raw/<%=name%>"
-                alt="Click me if txt, otherwise this image has been deleted."
+                alt="Click here to download file"
                 style="
                   max-height: 75vh;
                   width: auto;
