messy messy mess

--- a/src/pages/sus.ejs
+++ b/src/pages/sus.ejs
@@ -35,7 +35,7 @@
 ⠀⠀⠀⠀⠀⠀⠀⠈⠛⠻⠿⠿⠿⠿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     </span>
     <h3>
-        Sussy ShareX Host
+        A Somewhat Private ShareX Host
     </h3>
     <p>Join <a style="color: #ff8c8c" href='https://discord.gg/http'>Team Tritan</a> to request an API key/ShareX config.</p>
   </body>
