--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -23,11 +23,11 @@
     <meta name="twitter:title" content="<%=name%>" />
     <meta
       name="twitter:description"
-      content="Uploaded with a poggers sharex service."
+      content="Uploaded with a poggers file upload service."
     />
     <meta
       property="og:description"
-      content="Uploaded with a poggers sharex service."
+      content="Uploaded with a poggers file upload service."
     />
     <link type="application/json+oembed" href="/api/content/raw/<%=name%>" />
   </head>
