--- a/src/pages/sus.ejs
+++ b/src/pages/sus.ejs
@@ -37,6 +37,6 @@
     <h3>
         Private File Host
     </h3>
-    <p>Join <a style="color: #ff8c8c" href='https://discord.gg/http'>Team Tritan</a> to request an API key/ShareX config.</p>
+    <p>Join <a style="color: #5865F2; text-decoration:none" href='https://discord.gg/http'>Redacted Devs</a> to request an API key/config.</p>
   </body>
 </html>
