--- a/src/pages/sus.ejs
+++ b/src/pages/sus.ejs
@@ -35,8 +35,8 @@
 ⠀⠀⠀⠀⠀⠀⠀⠈⠛⠻⠿⠿⠿⠿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     </span>
     <h3>
-        Private File Host
+       Image Uploader
     </h3>
-    <p>Join <a style="color: #5865F2; text-decoration:none" href='https://discord.gg/http'>Redacted Devs</a> to request an API key/config.</p>
+    <p>Join <a style="color: #5865F2; text-decoration:none" href='https://discord.gg/http'>Redacted Devs</a> to request an API key/config file.</p>
   </body>
 </html>
