--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -20,6 +20,7 @@
     <meta property="og:image" content="/api/content/raw/<%=name%>" />
     <meta name="theme-color" content="#7c00d7" />
     <meta property="og:title" content="<%=name%>" />
+    <meta property="og:author" content="Sussy File Uploader" />
     <meta name="twitter:title" content="<%=name%>" />
     <meta
       name="twitter:description"
