--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -57,6 +57,9 @@
                 "
               />
             </a>
+              <center>
+              <a style="text-decoration: none;" href="mailto:netops@tritan.dev">Report</a>
+              </center>
           </div>
         </div>
       </div>
