--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -58,7 +58,7 @@
               />
             </a>
               <center>
-              <a style="text-decoration: none;" href="mailto:netops@tritan.dev">Report</a>
+              <a style="text-decoration: none;" href="mailto:netops@tritan.dev?subject=REPORT: <%=name%>&body=Hi, I'd like to report <%=name%> which was uploaded onto your sharex image host.">Report</a>
               </center>
           </div>
         </div>
