--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -39,7 +39,7 @@
         <div class="text-center bg-dark mb-4">
           <div class="card-body">
             <h1><%=name%></h1>
-            <% if(ext.includes('txt' || 'md' || 'css' || 'exe' || 'html' || 'mp4' || 'heic' )){ %>
+            <% if(ext.includes('.txt' || '.md' || '.css' || '.exe' || '.html' || '.mp4' || '.heic' )){ %>
             <meta
               http-equiv="Refresh"
               content="0; url='/api/content/raw/<%=name%>'"
