--- a/src/pages/uploader.ejs
+++ b/src/pages/uploader.ejs
@@ -57,7 +57,11 @@
       $(document).ready(function () {
         let dropzone = $("#dropzone");
         let apiKey = "";
-        let domains = ["https://im.sleepdeprived.wtf/", "https://example.com/"];
+        let domains = [
+          "https://im.sleepdeprived.wtf/",
+          "https://im.horny.rip",
+          "https://youre.sleepdeprived.wtf",
+        ];
 
         $("#key-button").click(function () {
           apiKey = $("#key-input").val();
