--- a/src/pages/uploader.ejs
+++ b/src/pages/uploader.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         color: white;
@@ -77,11 +78,11 @@
         let apiKey = localStorage.getItem("apiKey") || "";
         const domains = [
           "https://im.sleepdeprived.wtf",
-          "https://you're.sleepdeprived.wtf",
+          "https://ur.sleepdeprived.wtf",
           "https://probably.sleepdeprived.wtf",
           "https://because.sleepdeprived.wtf",
           "https://im.horny.rip",
-          "https://you're.horny.rip",
+          "https://ur.horny.rip",
           "https://probably.horny.rip",
           "https://because.horny.rip",
         ];
