--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -91,7 +91,11 @@
               content="0; url='/api/content/raw/<%=name%>'"
             />
             <% } %>
-            <a href="/api/content/raw/<%=name%>" target="_blank">
+            <a
+              style="text-decoration: none"
+              href="/api/content/raw/<%=name%>"
+              target="_blank"
+            >
               <img
                 src="/api/content/raw/<%=name%>"
                 alt="Click here to download/open the file."
