--- a/src/pages/img.ejs
+++ b/src/pages/img.ejs
@@ -92,7 +92,7 @@
             />
             <% } %>
             <a
-              style="text-decoration: none; color: whie"
+              style="text-decoration: none; color: white"
               href="/api/content/raw/<%=name%>"
               target="_blank"
             >
